[ added ] two new course added and fixed result section in dashboard overflow

--- a/user/assets/css/index.css
+++ b/user/assets/css/index.css
@@ -222,6 +222,7 @@ html, body{
     height: 400px;
     border-radius: 10px;
     box-shadow: 0 0 5px ;
+    overflow: scroll;
     background-color: var(--secondary-light);
 }
 
